--- a/Mobil 1 Fan Guide/AirshipConfig.plist
+++ b/Mobil 1 Fan Guide/AirshipConfig.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>APP_STORE_OR_AD_HOC_BUILD</key>
-	<false/>
+	<true/>
 	<key>DEVELOPMENT_APP_KEY</key>
 	<string>5UIYge4nR_KBTN1YR_EeVw</string>
 	<key>DEVELOPMENT_APP_SECRET</key>
